# CLI_Tools

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Archive/Active_CLI_tool/Headers/: CommandLineProcess.h
Archive/Active_CLI_tool/Src/: main.cpp
Archive/Demo_CLI_FIS/Headers/: CMD_literals.h
Archive/Demo_CLI_FIS/Src/: CMD_literals.cpp
Demo_CLI_FIS/Src/: Source.cpp
Primary_Project/Include/: CommandLineProcess.h  DialogLookUp.h  Internal.h  PlayerCampainGame.h
Primary_Project/Src/: CommandLineProcess.cpp  DialogLookUp.cpp  PlayerCampainGame.cpp  Source.cpp  story.script
Src/: CommandLineProcess.cpp  main.cpp
